--- a/MuscleNoti/Storyboards/Base.lproj/Main.storyboard
+++ b/MuscleNoti/Storyboards/Base.lproj/Main.storyboard
@@ -16,40 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="vLN-LA-lqJ">
-                                <rect key="frame" x="114" y="431" width="186" height="34"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="had-DO-F7J">
-                                        <rect key="frame" x="0.0" y="0.0" width="32" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                    </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u8D-F4-7iN">
-                                        <rect key="frame" x="52" y="0.0" width="5" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oFJ-kR-bc7">
-                                        <rect key="frame" x="77" y="0.0" width="32" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                    </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zei-xZ-SzD">
-                                        <rect key="frame" x="129" y="0.0" width="5" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DC9-AU-hGB">
-                                        <rect key="frame" x="154" y="0.0" width="32" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                    </textField>
-                                </subviews>
-                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Mz-AS-yEY">
-                                <rect key="frame" x="167" y="498.5" width="80" height="31"/>
+                                <rect key="frame" x="167" y="586" width="80" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="1bU-sf-ZDp"/>
                                     <constraint firstAttribute="width" constant="80" id="QvY-4x-SYA"/>
@@ -61,8 +29,11 @@
                                     <action selector="startAlarm:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CI6-mc-CrQ"/>
                                 </connections>
                             </button>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="W2l-nm-gfW">
+                                <rect key="frame" x="47" y="340" width="320" height="216"/>
+                            </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set time for alarm" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LBc-SK-eW0">
-                                <rect key="frame" x="15" y="368" width="384" height="23"/>
+                                <rect key="frame" x="15" y="287" width="384" height="23"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -71,20 +42,18 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="vLN-LA-lqJ" firstAttribute="top" secondItem="LBc-SK-eW0" secondAttribute="bottom" constant="40" id="5L0-ix-BTU"/>
                             <constraint firstItem="LBc-SK-eW0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="15" id="6mN-s0-5Is"/>
-                            <constraint firstItem="vLN-LA-lqJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IXe-YZ-Rqu"/>
-                            <constraint firstItem="vLN-LA-lqJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Ky3-NG-I7y"/>
+                            <constraint firstItem="W2l-nm-gfW" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="7OZ-J7-OBV"/>
+                            <constraint firstItem="W2l-nm-gfW" firstAttribute="top" secondItem="LBc-SK-eW0" secondAttribute="bottom" constant="30" id="SOh-Pp-cxo"/>
                             <constraint firstItem="LBc-SK-eW0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ceI-m4-cl0"/>
-                            <constraint firstItem="5Mz-AS-yEY" firstAttribute="top" secondItem="vLN-LA-lqJ" secondAttribute="bottom" constant="33.5" id="gW1-ba-8pE"/>
                             <constraint firstAttribute="trailing" secondItem="LBc-SK-eW0" secondAttribute="trailing" constant="15" id="kFf-bF-5iF"/>
                             <constraint firstItem="5Mz-AS-yEY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kwA-kf-5Bk"/>
+                            <constraint firstItem="5Mz-AS-yEY" firstAttribute="top" secondItem="W2l-nm-gfW" secondAttribute="bottom" constant="30" id="pdB-NM-3GQ"/>
+                            <constraint firstItem="W2l-nm-gfW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wfF-4y-0aA"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="hourTextField" destination="had-DO-F7J" id="UUG-Ka-BJY"/>
-                        <outlet property="minuteTextField" destination="oFJ-kR-bc7" id="60X-7q-iCd"/>
-                        <outlet property="secundTextField" destination="DC9-AU-hGB" id="ZIy-vu-ftC"/>
+                        <outlet property="datePicker" destination="W2l-nm-gfW" id="Gx3-Wb-7pi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
